<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">小工具</string>
    <string name="action_settings">设置</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_activity_label">主页</string>
    <string name="eval_fragment_label">简易计算器</string>
    <string name="bmi_fragment_label">Bmi计算器</string>
    <string name="home_fragment_label">主页</string>
    <string name="next">下一个</string>
    <string name="previous">上一个</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="del"><![CDATA[<-]]></string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mul">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sub">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="eq"><![CDATA[=]]></string>
    <string name="nav">导航</string>
    <string name="bmi_clear">清空</string>
</resources>