<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <activity
        android:id="@+id/Main"
        android:name="org.eval.MainActivity"
        android:label="@string/main_activity_label"
        tools:layout="@layout/activity_main">

    </activity>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="org.eval.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_EvalFragment"
            app:destination="@id/EvalFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_BmiFragment"
            app:destination="@id/BmiFragment" />
    </fragment>
    <fragment
        android:id="@+id/EvalFragment"
        android:name="org.eval.ui.eval.EvalFragment"
        android:label="@string/eval_fragment_label"
        tools:layout="@layout/fragment_eval">
        <action
            android:id="@+id/action_EvalFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/BmiFragment"
        android:name="org.eval.ui.bmi.BmiFragment"
        android:label="@string/bmi_fragment_label"
        tools:layout="@layout/fragment_bmi">
        <action
            android:id="@+id/action_BmiFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>